--- a/Formation_Control_task/Formation_Control_task_ROS2/src/formation_task/package.xml
+++ b/Formation_Control_task/Formation_Control_task_ROS2/src/formation_task/package.xml
@@ -14,7 +14,9 @@
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>ros2launch</exec_depend>
-  
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>visualization_msgs</exec_depend>
+
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
